openshift/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service1
spec:
  selector:
    app: backend-app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
