openshift/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-route1
spec:
  to:
    kind: Service
    name: backend-service1
  port:
    targetPort: 8080
  tls:
    termination: edge
